--- a/configs/addressbook-local.yaml
+++ b/configs/addressbook-local.yaml
@@ -46,3 +46,6 @@ logging:
     level: WARNING
     handlers:
       - console
+
+tracing:
+  addrservice.tracing.CummulativeFunctionTimeProfiler: null
